# Landmark_Navigation

./: README.md  semantic_mapping.repos
landmark_manager/: CMakeLists.txt  README.md  package.xml
landmark_manager/config/: landmarks.yaml  semantic_labeling_params.yaml
landmark_manager/foxglove/: luci_map.json
landmark_manager/landmarks/: 2024-11-27_20-43-26.yaml
landmark_manager/launch/: landmark_manager.launch.py  semantic_labeling.launch.py
landmark_manager/msg/: SemanticPoint.msg
landmark_manager/src/: landmark_manager.cpp  semantic_labeling.cpp
landmark_manager/srv/: NavigateToLandmark.srv  SaveLandmark.srv
navigation_gui/: README.md  package.xml  setup.cfg  setup.py
navigation_gui/launch/: navigation_gui.launch.py
navigation_gui/navigation_gui/: navigation_gui.py
